[package]
name = "dicechan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.44.0"
shuttle-runtime = "0.44.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.26.0"
tracing = "0.1.37"
nom = "7.1.3"
rand = "0.8.5"
itertools = "0.11.0"
