[package]
name = "dicechan"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
nom = "7.1.3"
rand = "0.8.5"
itertools = "0.11.0"
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
